feat: new route classification/query

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,8 @@ FRONTEND_URLS=
 DATABASE_URL=
 SHADOW_DATABASE_URL=
 
+CLASSIFICATION_MODEL_ENDPOINT=
+NLP_MODEL_ENDPOINT=
+IMAGE_MODEL_ENDPOINT=
+
 REDIS_URL=
