feat: new route image-model/query

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,13 @@ FRONTEND_URLS=
 
 DATABASE_URL=
 SHADOW_DATABASE_URL=
+SKIN_CATEGORY_ID=
 
 CLASSIFICATION_MODEL_ENDPOINT=
 NLP_MODEL_ENDPOINT=
 IMAGE_MODEL_ENDPOINT=
 
 REDIS_URL=
+
+FIREBASE_CLOUD_STORAGE_KEY_FILENAME="Go to Firebase Console at https://console.firebase.google.com ; select your Firebase Cloud Storage project ; go to Project Settings (the gear icon in left sidebar), choose tab 'Service accounts', click 'Generate new private key', download the JSON file, then paste its absolute path (full path) here."
+FIREBASE_CLOUD_STORAGE_BUCKET_NAME="Still in Firebase Console, click 'Storage' in the left sidebar, you will see a link of format 'gs://XXX.appspot.com' ; copy the XXX.appspot.com part and paste it here."
