--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.17.0",
     "@sinclair/typebox": "^0.32.35",
+    "@types/mime-types": "^2.1.4",
     "dotenv": "^16.4.5",
     "fast-jwt": "^4.0.2",
     "fastify": "^4.28.1",
     "fastify-plugin": "^4.5.1",
     "firebase-admin": "^12.3.0",
+    "mime-types": "^2.1.35",
     "redis": "^4.7.0",
     "typescript": "^5.5.4"
   },
