feat: enable faking AI APIs

--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ DATABASE_URL=
 SHADOW_DATABASE_URL=
 SKIN_CATEGORY_ID=
 
-CLASSIFICATION_MODEL_ENDPOINT=
-NLP_MODEL_ENDPOINT=
-IMAGE_MODEL_ENDPOINT=
+CLASSIFICATION_MODEL_ENDPOINT="If not specified, return fake results (i.e. use Fake AI API)"
+NLP_MODEL_ENDPOINT="If not specified, return fake results (i.e. use Fake AI API)"
+IMAGE_MODEL_ENDPOINT="If not specified, return fake results (i.e. use Fake AI API)"
 
 REDIS_URL=
 
