--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.17.0",
     "@sinclair/typebox": "^0.32.35",
     "@types/mime-types": "^2.1.4",
+    "doc999tor-fast-geoip": "^1.1.246",
     "dotenv": "^16.4.5",
     "fast-jwt": "^4.0.2",
     "fastify": "^4.28.1",
